# nears

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  README_EN.md  README_ES.md  build.rs  main.rs  nears
app/: global.css  layout.rs  mod.rs  page.rs
app/_auth/: mod.rs
app/_auth/acceder/: page.rs
app/api/: mod.rs
app/api/auth/: mod.rs
app/api/auth/acceder/: route.rs
app/api/auth/salir/: route.rs
app/api/contacto/: mod.rs  route.rs
app/api/contacto/id/: route.rs
app/api/dashboard/: route.rs
app/contacto/: mod.rs  page.rs
app/contacto/components/: formulario.rs  mod.rs
app/dashboard/: mod.rs  page.rs
app/dashboard/components/: barra_herramientas.rs  card_stat.rs  formulario_contacto.rs  mod.rs  tabla.rs
app/dashboard/crear/: page.rs
app/dashboard/id/: mod.rs  page.rs
app/dashboard/id/editar/: page.rs
components/: footer.rs  header.rs  mod.rs
components/icons/: bold.rs  duotone.rs  fill.rs  light.rs  mod.rs  regular.rs  thin.rs
components/ui/: button.rs  dialog.rs  dialog_confirmation.rs  menu.rs  mod.rs  theme_toggle.rs  toast.rs
lib/: auth.rs  db.rs  mod.rs
lib/data/: contacto_data.rs  mod.rs
lib/types/: contacto_types.rs  mod.rs
migrations/: 20260309000000_init_auth.sql
scripts/: seed.rs
