[package]
name = "nears-template"
version = "0.1.0"
edition = "2021"
default-run = "nears-template"

[[bin]]
name = "nears-template"
path = "main.rs"

[[bin]]
name = "seed"
path = "scripts/seed.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
maud = "0.26"
tower-http = { version = "0.6", features = ["fs"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
cookie = "0.18.1"
axum-extra = { version = "0.12.5", features = ["cookie"] }
bcrypt = "0.19.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3

[build-dependencies]
walkdir = "2.5.0"
